--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kitty Socks</title>
+    <title>Pair Socks</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="manifest" href="manifest.json" />
-    <link rel="icon" href="icon.png" type="image/png" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" href="./images/icon/icon.png" type="image/png" />
     <meta name="theme-color" content="#4caf50" />
 
 </head>
 
 <body>
     <main>
+        <h1>Pair<img src="./images/icon/icon.png" alt="logo">Socks</h1>
         <nav class="tabs">
             <button class="tab-btn active" data-tab="registro">Registrar</button>
             <button class="tab-btn" data-tab="listado">Registros</button>
